[gd_scene load_steps=2 format=3 uid="uid://ce1jr4egm8lvy"]

[ext_resource type="Script" path="res://ui/HUD.gd" id="1_rv2ow"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rv2ow")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 15.0
offset_right = 88.0
offset_bottom = 42.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Score"
vertical_alignment = 1

[node name="ScoreNum" type="Label" parent="ScoreLabel" groups=["save"]]
layout_mode = 0
offset_top = 27.0
offset_right = 40.0
offset_bottom = 69.0
text = "0"

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -198.0
offset_right = -15.0
offset_bottom = 42.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "High Score"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HighScoreNum" type="Label" parent="HighScoreLabel" groups=["save"]]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 6.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 2
text = "0"
horizontal_alignment = 2

[node name="WaveLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_right = 64.5
offset_bottom = 42.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "Wave 1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -39.0
offset_right = 250.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TryAgainButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(100, 75)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.5
offset_top = -106.0
offset_right = 89.5
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Try Again"

[node name="ChatQueue" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.278431)
offset_left = 11.0
offset_top = 571.0
offset_right = 314.0
offset_bottom = 711.0

[node name="ChatMessagesLabel" type="RichTextLabel" parent="ChatQueue"]
self_modulate = Color(1, 1, 1, 0.803922)
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 296.0
offset_bottom = 135.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 20
scroll_active = false
scroll_following = true

[node name="HealthLabel" type="Label" parent="."]
offset_left = 301.0
offset_right = 374.0
offset_bottom = 42.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Health"
vertical_alignment = 1

[node name="HealthBackground" type="Panel" parent="HealthLabel"]
self_modulate = Color(1, 1, 1, 0.278431)
layout_mode = 0
offset_left = -16.0
offset_top = 34.0
offset_right = 97.0
offset_bottom = 61.0

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="TryAgainButton" to="." method="_on_try_again_button_pressed"]
